# databricks-nemweb-lab

./: .gitignore  CLAUDE.md  README.md  databricks.yml  env.example  requirements.txt
config/: base-environment-svls4.yaml  create_base_environment.py
databricks-nemweb-analyst-lab/: README.md  prd.md
databricks-nemweb-anaylst-lab/: README.md  prd.md
databricks-nemweb-lab/: DEPLOYMENT.md  README.md  TESTING_SERVERLESS.md  build_latest.sh  deploy_wheel.sh  minimal_repro_fixed.py  test_minimal_repro.py  test_new_tables.py  test_serverless_arrow.py
databricks-nemweb-lab/repro_arrow_package/: README.md  pyproject.toml  test_broken_datasource.py
databricks-nemweb-lab/repro_arrow_package/src/arrow_repro/: __init__.py  broken_datasource.py  nemweb_datasource.py
databricks-nemweb-lab/src/: __init__.py  local_spark_iceberg.py  nem_registry.py  nemweb_datasource.py  nemweb_datasource_arrow.py  nemweb_datasource_stream.py  nemweb_dispatch.py  nemweb_local.py  nemweb_utils.py  pyproject.toml  setup.py
databricks-nemweb-lab/src/pipeline/: nemweb_pipeline.py  spark-pipeline.yaml
databricks-nemweb-lab/src/tests/: test_nemweb_datasource.py  test_nemweb_datasource_arrow.py  test_nemweb_integration.py  test_nemweb_parsing.py  test_nemweb_sink.py  test_nemweb_stream.py  test_nemweb_utils.py  test_solution_patterns.py
databricks-nemweb-ml-lab/: CLAUDE.md  FACILITATOR_GUIDE.md  FACILITATOR_PLAYBOOK.md  README.md  databricks.yml  pyproject.toml
databricks-nemweb-ml-lab/app/: app.py  app.yaml  requirements.txt
databricks-nemweb-ml-lab/pipelines/: ml_features.py  nemweb_ml_pipeline.py  nemweb_prediction_pipeline.py  nemweb_streaming_pipeline.py
databricks-nemweb-ml-lab/resources/: jobs.yml  ml_pipeline.pipeline.yml  nem_forecast.app.yml  prediction_pipeline.pipeline.yml  streaming_pipeline.pipeline.yml
databricks-nemweb-ml-lab/src/ml_pipeline/transformations/: nemweb_ml_pipeline.py
databricks-nemweb-ml-lab/src/prediction_pipeline/transformations/: ml_features.py  nemweb_prediction_pipeline.py
databricks-nemweb-ml-lab/src/streaming_pipeline/: register_datasource.py
databricks-nemweb-ml-lab/src/streaming_pipeline/transformations/: bronze_dispatch.py  bronze_interconnector.py  bronze_p5min.py  bronze_price.py  bronze_rooftop_pv.py  bronze_scada.py  bronze_weather.py  gold_demand_hourly.py  gold_forecast_accuracy.py  gold_interconnector_hourly.py  gold_price_hourly.py  silver_demand_weather.py  silver_forecast_vs_actual.py  silver_supply_stack.py
databricks-nemweb-ml-lab/tests/: conftest.py  test_ml_features.py
databricks-nemweb-ml-lab/workshops/: 00_data_setup.py  01_ml_workshop.py  02_load_forecast_workshop.py  03_market_modelling_workshop.py  05_feature_store_workshop.py  06_chronos_foundation_model.py
docs/: PRD_ML_Workshops.md
nemweb-data-source/: __init__.py  bom_weather.py  conftest.py  nemweb_datasource_arrow.py  nemweb_datasource_stream.py  nemweb_ingest.py  nemweb_sink.py  nemweb_utils.py  pyproject.toml  setup.py
nemweb-standalone/: README.md  nemweb.py
(+106 files in other folders)
