[project]
name = "nemweb-ml-lab"
version = "0.1.0"
description = "NEMWEB ML Lab - Load Forecasting & Market Modelling pipelines for the Australian NEM"
authors = [{ name = "David O'Keeffe" }]
requires-python = ">=3.10,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "databricks-connect>=15.4,<15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
