[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nemweb-datasource"
version = "1.0.0"
description = "Custom PySpark data source for AEMO NEMWEB electricity market data"
requires-python = ">=3.10"
dependencies = []  # pyspark is provided by the runtime

[project.optional-dependencies]
local = [
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
