[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nemweb-datasource"
version = "2.10.20"
description = "Custom PySpark data source for AEMO NEMWEB electricity market data"
requires-python = ">=3.10"
dependencies = []  # pyspark is provided by the runtime

[project.optional-dependencies]
local = [
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
]

# Use py_modules for flat layout (modules directly in src/)
[tool.setuptools]
py-modules = [
    "nemweb_datasource_arrow",
    "nemweb_datasource_stream",
    "nemweb_utils",
    "nemweb_ingest",
    "nemweb_sink",
    "nemweb_local",
    "nem_registry",
    "local_spark_iceberg",
]
